--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="navigation">
 			<ul>
 				<i id="menu-close" class="fas fa-times"></i>
-				<li><a href="index.html" class="active">Home</a></li>
+				<li><a href="index.html" >Home</a></li>
 				<li><a href="about.html">About Us</a></li>
 				<!-- <li><a href="blog.html">Blog</a></li> -->
 				<!-- <li><a href="courses.html">Courses</a></li> -->
