--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 			<ul>
 				<i id="menu-close" class="fas fa-times"></i>
 				<li><a href="index.html">Home</a></li>
-				<li><a href="about.html" class="active">About Us</a></li>
+				<li><a href="about.html">About Us</a></li>
 				<!-- <li><a href="blog.html">Blog</a></li> -->
 				<!-- <li><a href="courses.html">Courses</a></li> -->
 				<li><a href="contact.html">Contact</a></li>
