--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 				<li><a href="about.html">About Us</a></li>
 				<!-- <li><a href="blog.html">Blog</a></li> -->
 				<!-- <li><a href="courses.html">Courses</a></li> -->
-				<li><a href="contact.html" class="active">Contact</a></li>
+				<li><a href="contact.html">Contact</a></li>
 
 				<li><a href="service.html">Service</a></li>
 
