--- a/service.html
+++ b/service.html
@@ -33,7 +33,7 @@
 
 				<li><a href="index.html">Home</a></li>
 				
-                <li><a href="about.html" class="active">About Us</a></li>
+                <li><a href="about.html">About Us</a></li>
 				
                 <!-- <li><a href="blog.html">Blog</a></li> -->
 				<!-- <li><a href="courses.html">Courses</a></li> -->
@@ -41,8 +41,6 @@
                 <li><a href="contact.html">Contact</a></li>
 
 				<li><a href="service.html">Service</a></li>
-
-				<!-- <li><a href="https://surveyheart.com/form/648849513ee3114aebeefc35">Registration</a></li> -->
 
 			</ul>
 
