--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		<!-- <p>URGENTLY <br> <strong style="font-size: 30px;">HIRING!</strong> </p> -->
 		<div class="btn">
 			<a href="about.html" class="blue">About Us</a>
-			<a href="https://surveyheart.com/form/648849513ee3114aebeefc35" class="yellow">Services</a>
+			<a href="service.html" class="yellow">Services</a>
 		</div>
 	</section>
 	<!-- Hero section ends from here -->
