--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<!-- Hero section starts from here -->
 	<section id="home">
 		<h2>
-			Welcome to Intrusion
+			Welcome to Threat
 			<br>
 			Detection System
 		</h2>
