--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Deepak Sharma</title>
+	<title>Threat Detection</title>
 
 	<!-- font Awesome CDN link -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
@@ -57,7 +57,7 @@
 		
 		<div class="btn">
 			<a href="about.html" class="blue">About Us</a>
-			<a href="https://surveyheart.com/form/648849513ee3114aebeefc35" class="yellow">Services</a>
+			<a href="service.html" class="yellow">Services</a>
 		</div>
 	</section>
 	<!-- Hero section ends from here -->
