--- a/service.html
+++ b/service.html
@@ -69,7 +69,7 @@
 
 			<div class="fea-box">
 				<i class="fa-solid fa-book-bookmark"></i>
-				2. <a href="#">Web Application</a>
+				2. <a href="huggingface.co/spaces/Kishan8055/DrLLM">Web Application</a>
 				<p>
 					Web application provede a very fast service with 99% accuraacy.
 				</p>
