--- a/backend/chat.html
+++ b/backend/chat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatGPT-Like Interface</title>
+    <title>Kishan Chat</title>
     <style>
         body {
             font-family: Arial, sans-serif;
